--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -5102,6 +5102,67 @@ padding-bottom: 70px;
   font-size: 16px;
 }
 
+/* vi - home user - profil app.js */
+/* vi - home user - profil app.js */
+/* vi - home user - profil app.js */
+.profil-app {
+  display: flex;
+  align-items: center;
+}
+
+.profil-app .part p {
+  font-size: 20px;
+}
+
+.profil-app .image img {
+  width: 105px;
+  border-radius: 7px;
+  margin-right: 10px;
+}
+
+.profil-app .icon {
+  display: flex;
+  padding-top: 20px;
+}
+
+.profil-app .a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 110px;
+}
+
+.profil-app .a p {
+  font-size: 14px;
+  color: #666;
+}
+
+.profil-app .a svg {
+  width: 20px;
+  fill: #666;
+}
+
+/* vi - home user - block image.js */
+/* vi - home user - block image.js */
+/* vi - home user - block image.js */
+/* vi - home user - block image.js */
+.block-image {
+  overflow-x: auto;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.block-image .images {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.block-image .images img {
+  width: 220px;
+  border-radius: 15px;
+  padding: 0px 5px;
+}
+
 /* 1350px */
 /* 1350px */
 /* 1350px */
