--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3738,7 +3738,10 @@ padding-bottom: 70px;
   padding: 20px;
 }
 
-
+.home-ja .main .app .a img {
+  width: 200px;
+  border-radius: 0px;
+}
 
 /* alrani */
 /* alrani */
@@ -4327,6 +4330,137 @@ padding-bottom: 70px;
 .one-book-part-two .display .language .a {
   padding: 5px 0px;
 }
+
+
+/* al - home - details.js */
+/* al - home - details.js */
+/* al - home - details.js */
+/* al - home - details.js */
+/* al - home - details.js */
+/* al - home - details.js */
+.details-book-mobile {
+  display: none;
+}
+
+.details-book-pc .details-book .detail {
+  display: flex;
+  margin-left: 20px;
+}
+
+.details-book .title {
+  font-weight: bold;
+  font-size: 20px; 
+  padding-top: 50px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+}
+
+.details-book .detail .a {
+  background-color: #00cc00;
+  color: white;
+  width: 200px;
+}
+
+.details-book .detail .a p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+
+.details-book .detail .b {
+  background-color: white;
+  color: #444;
+  width: 200px;
+}
+
+.details-book .detail .b p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+.details-book .detail hr {
+  border: 1px solid #ccc;
+}
+
+
+/* al - popup details book mobile */
+/* al - popup details book mobile */
+/* al - popup details book mobile */
+/* al - popup details book mobile */
+/* al - popup details book mobile */
+.popup-details-book-mobile-background {
+  background: #00000050;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow-y: auto;
+}
+
+.popup-details-book-mobile-background .align {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin-top: 150px;
+  padding-bottom: 50px;
+}
+
+/* al - note of book */
+/* al - note of book */
+/* al - note of book */
+/* al - note of book */
+/* al - note of book */
+.note-of-book {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 70px;
+}
+
+.note-of-book .border {
+  padding: 20px 25px;
+  border: 1px solid #ccc;
+  width: 150px;
+  border-radius: 5px;
+}
+
+.note-of-book .a {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.note-of-book .b {
+  display: flex;
+  align-items: center;
+}
+
+.note-of-book .b p {
+  padding-left: 10px;
+}
+
+/* al - Stars Five.js */
+/* al - Stars Five.js */
+/* al - Stars Five.js */
+/* al - Stars Five.js */
+.five-stars {
+  display: flex;
+  padding-left: 20px;
+  padding-bottom: 7px;
+}
+
+.five-stars .a svg {
+  padding-right: 3px;
+}
+
+.five-stars .b p {
+  padding-left: 5px;
+}
+
+
 /* in - auth - logout.js */
 /* in - auth - logout.js */
 /* in - auth - logout.js */
@@ -6024,6 +6158,7 @@ padding-bottom: 70px;
    /* alrani */
    /* alrani */
 
+
 .pc-one-book {
   display: none;
  }
@@ -7126,6 +7261,62 @@ padding-bottom: 70px;
     /* alrani */
     /* alrani */
     /* alrani */
+  .details-book-pc {
+    display: none;
+  }
+  
+  .details-book-mobile {
+    display: flex;
+    align-items: center;
+  }
+  
+  .details-book-mobile .detail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 20px;
+  }
+  
+  .details-book-mobile .title {
+    font-weight: bold;
+    font-size: 20px; 
+    padding-top: 50px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+  }
+
+  .details-book-mobile .detail .a {
+    background-color: #00cc00;
+    color: white;
+  }
+
+  .details-book-mobile .detail .a p {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+  }
+  
+  .details-book-mobile .detail .b {
+    background-color: white;
+    color: #444;
+  }
+  
+  .details-book-mobile .detail .b p {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+  }
+  
+  .details-book-mobile .detail hr {
+    border: 1px solid #ccc;
+  }
+  
+  .details-book-mobile svg {
+    padding-top: 55px;
+    fill: #444;
+  }
+
     .popup {
       margin: 0px 20px;
       margin-top: 150px;
@@ -7569,6 +7760,14 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 300px) {
   /* alrani */
+  .details-book-mobile .detail .a {
+    width: 195px;
+  }
+
+  .details-book-mobile .detail .b {
+    width: 195px;
+  }
+
   .popup-background-al .popup-card img {
     width: 250px;
   }
@@ -7665,6 +7864,18 @@ padding-bottom: 70px;
 /* 260px */
 @media screen and (max-width: 260px) {
   /* alrani */
+  .details-book-mobile .detail .a {
+    width: 175px;
+  }
+
+  .details-book-mobile .detail .b {
+    width: 175px;
+  }
+
+  .details-book-mobile svg {
+    padding-top: 72px;
+  }
+
 .popup-background-al .popup-card img {
   width: 230px;
 }
@@ -7819,6 +8030,22 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 235px) {
    /* alrani */
+   .note-of-book .border {
+     width: 130px;
+   }
+
+   .details-book-mobile .detail .a {
+    width: 165px;
+  }
+
+  .details-book-mobile .detail .b {
+    width: 165px;
+  }
+
+  .details-book-mobile svg {
+    padding-top: 72px;
+  }
+
 .popup-background-al .popup-card img {
   width: 210px;
 }
@@ -7863,6 +8090,18 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 225px) {
   /* alrani */
+  .details-book-mobile .detail .a {
+    width: 160px;
+  }
+
+  .details-book-mobile .detail .b {
+    width: 160px;
+  }
+
+  .details-book-mobile svg {
+    padding-top: 72px;
+  }
+
 .popup-background-al .popup-card img {
  width: 200px;
 }
@@ -7883,6 +8122,18 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 220px) {
   /* alrani */
+  .details-book-mobile .detail .a {
+    width: 145px;
+  }
+
+  .details-book-mobile .detail .b {
+    width: 145px;
+  }
+  
+  .details-book-mobile svg {
+    padding-top: 72px;
+  }
+
 .one-book .images .image img {
   width: 75px;
   height: 30px;
@@ -7897,6 +8148,23 @@ padding-bottom: 70px;
 
 @media screen and (max-width: 215px) {
   /* alrani */
+  .note-of-book .border {
+    padding: 17px 20px;
+    width: 130px;
+  }
+
+  .details-book-mobile .detail .a {
+    width: 138px;
+  }
+
+  .details-book-mobile .detail .b {
+    width: 138px;
+  }
+
+  .details-book-mobile svg {
+    padding-top: 72px;
+  }
+
 .popup-background-al .popup-card img {
  width: 190px;
 }
